create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1431,6 +1431,9 @@ body {
 .cid-rnddZucb9V blockquote {
   color: #767676;
 }
+.cid-rnddZucb9V .mbr-text P {
+  text-align: center;
+}
 .cid-rnddXFqwCt {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1883,6 +1886,9 @@ body {
 .cid-rnd98izdrd blockquote {
   color: #767676;
 }
+.cid-rnd98izdrd .mbr-text P {
+  text-align: center;
+}
 .cid-rnd9biofV9 {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -2334,6 +2340,9 @@ body {
 .cid-rnd8thA1Mv .mbr-text,
 .cid-rnd8thA1Mv blockquote {
   color: #767676;
+}
+.cid-rnd8thA1Mv .mbr-text P {
+  text-align: center;
 }
 .cid-rnd8gvsxNm {
   padding-top: 15px;
@@ -2794,6 +2803,9 @@ body {
 .cid-rnclpbLkDX .mbr-text,
 .cid-rnclpbLkDX blockquote {
   color: #767676;
+}
+.cid-rnclpbLkDX .mbr-text P {
+  text-align: center;
 }
 .cid-rnclqqIUdw {
   padding-top: 0px;
